Falcon Project Completed

--- a/app.json
+++ b/app.json
@@ -520,7 +520,7 @@
         "modern": {
             "toolkit": "modern",
 
-            "theme": "theme-material",
+            "theme": "theme-triton",
 
             "sass": {
                 "generated": {
